--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             </plugin>
 
             <!-- Docker maven plugin -->
-            <plugin>
+            <!-- <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.0.0</version>
@@ -55,7 +55,7 @@
                         </resource>
                     </resources>
                 </configuration>
-            </plugin>
+            </plugin> -->
         </plugins>
 
     </build>
