--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,16 @@
             </plugin>
 
             <!-- Docker maven plugin -->
-            <!-- <plugin>
+            <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.0.0</version>
                 <configuration>
                     <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <imageTags>
+                      <imageTag>${project.version}</imageTag>
+                      <imageTag>latest</imageTag>
+                    </imageTags>
                     <dockerDirectory>src/main/docker</dockerDirectory>
                     <resources>
                         <resource>
@@ -55,7 +59,7 @@
                         </resource>
                     </resources>
                 </configuration>
-            </plugin> -->
+            </plugin>
         </plugins>
 
     </build>
