--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
+    
+    <!-- <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+      <docker.image.prefix>prefix</docker.image.prefix>
+    </properties> -->
+         
     <build>
         <plugins>
             <plugin>
@@ -45,6 +51,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.0.0</version>
                 <configuration>
+                    <googleContainerRegistryEnabled>false</googleContainerRegistryEnabled>
                     <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
                     <imageTags>
                       <imageTag>${project.version}</imageTag>
