--- a/pom.xml
+++ b/pom.xml
@@ -38,14 +38,14 @@
       <docker.image.prefix>prefix</docker.image.prefix>
     </properties> -->
          
-    <build>
+<!--    <build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-            <!-- Docker maven plugin -->
+            &lt;!&ndash; Docker maven plugin &ndash;&gt;
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
@@ -69,6 +69,6 @@
             </plugin>
         </plugins>
 
-    </build>
+    </build>-->
 
 </project>
